<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.assignment.common.table.CartTable" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProduct"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:src="@drawable/picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/imageProduct"
            app:layout_constraintTop_toTopOf="@id/imageProduct">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@{data.name}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:id="@+id/quantityWrapper"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productName"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_baseline_remove_24"
                    app:layout_constraintBottom_toBottomOf="@id/itemQuantity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/itemQuantity"
                    app:tint="@color/default_gray"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_baseline_add_24"
                    app:layout_constraintBottom_toBottomOf="@id/itemQuantity"
                    app:layout_constraintStart_toEndOf="@id/itemQuantity"
                    app:layout_constraintTop_toTopOf="@id/itemQuantity"
                    app:tint="@color/default_gray" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemQuantity"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:background="@drawable/total_quantity_background"
                    android:inputType="number"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/remove"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/quantityWrapper"
                app:layout_constraintStart_toEndOf="@id/quantityWrapper"
                app:layout_constraintTop_toBottomOf="@id/productName"
                tools:text="@{data.unit}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sub_total"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantityWrapper" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/subTotalText"
                app:layout_constraintTop_toTopOf="@id/subTotalText"
                tools:text="@string/rp_13_500" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>